--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
     "pug": "^3.0.2"
   }
 }
