--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "hello-ts": "ts-node scripts/hello.ts"
+  },
   "devDependencies": {
     "@prettier/plugin-pug": "^1.16.6",
-    "prettier": "^2.4.1"
+    "@types/node": "^16.9.6",
+    "prettier": "^2.4.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "@types/fs-extra": "^9.0.13",
