--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "hello-ts": "ts-node scripts/hello.ts"
+    "hello-ts": "ts-node scripts/hello.ts",
+    "html-to-pug": "ts-node scripts/htmlToPug.ts"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "^1.16.6",
+    "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.6",
+    "html2pug": "^4.0.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
