--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prettier/plugin-pug": "^1.16.6",
     "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.6",
+    "@types/prettier": "^2.4.0",
     "html2pug": "^4.0.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
