--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.9.6",
     "@types/prettier": "^2.4.0",
     "@types/pug": "^2.0.5",
+    "@types/yaml": "^1.9.7",
     "html2pug": "^4.0.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
@@ -23,6 +24,7 @@
     "@types/fs-extra": "^9.0.13",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "yaml": "^1.10.2"
   }
 }
