--- a/pages/hoiandor/index.yaml
+++ b/pages/hoiandor/index.yaml
@@ -38,4 +38,4 @@ header:
 banner:
   background: assets/images/hoiandor/nh-ban-m-2.jpg
   title: Dự án <br />Hội An D'Or
-  description: Dự án nghỉ dưỡng đáng chú ý tại Hội An – Đà Nẵng trong năm 2021
+  description: Dự án nghỉ dưỡng đáng chú ý tại Hội An – Đà Nẵng trong năm 2021 <br/> <br/> Được kiến tạo trên một vùng đất bồi lắng phù sa cách trung tâm phố cổ Hội An 800m, <strong>Hoian d’Or</strong> là nơi đất vượng giao hòa, tôn tạo giá trị riêng, khơi lên chất sống mới của miền di sản; là mảnh ghép cuối cùng tạo nên một Hội An trọn vẹn
