--- a/pages/hoiandor/index.yaml
+++ b/pages/hoiandor/index.yaml
@@ -39,3 +39,24 @@ banner:
   background: assets/images/nh-ban-m-2.jpg
   title: Hội An D'Or
   description: Dự án nghỉ dưỡng đáng chú ý tại Hội An – Đà Nẵng trong năm 2021 <br/> <br/> Được kiến tạo trên một vùng đất bồi lắng phù sa cách trung tâm phố cổ Hội An 800m, <strong>Hoi An D’Or</strong> là nơi đất vượng giao hòa, tôn tạo giá trị riêng, khơi lên chất sống mới của miền di sản, là mảnh ghép cuối cùng tạo nên một Hội An trọn vẹn.
+about01:
+  info:
+    title: Hội An D'Or
+    description: Thương cảng Vàng son – Liền kề phố hội
+    details:
+      - primary: "Tên pháp lý:"
+        secondary: Khu du lịch sinh thái Cồn Bắp
+      - primary: "Tên thương mại:"
+        secondary: Hoian d’Or
+      - primary: "Vị trí:"
+        secondary: Cồn Bắp, Phường Cẩm Nam, Tp Hội An, tỉnh Quảng Nam
+      - primary: "Quy mô:"
+        secondary: 24,48ha
+      - primary: "Mật độ xây dựng:"
+        secondary: 19,12%
+      - primary: "Chủ đầu tư:"
+        secondary: Công ty TNHH Du lịch Sinh thái Cồn Bắp
+      - primary: "Tổng vốn đầu tư:"
+        secondary: 2.330 tỷ đồng
+      - primary: "Sản phẩm/ Tiện ích dịch vụ:"
+        secondary: "Dự án bao gồm 3 phân khu chính Village -Town – Garden các phân khu bao gồm các công trình sau: Shophouse/ Villa/ Khách sạn 5* tiêu chuẩn/ Khách sạn 5* VIP/ Condotel/ Boutique 3*/ Khu nông nghiệp sinh thái/ Không gian văn hoá/ Nhà hàng đặc sản/ Bến tàu/ Trung tâm thương mại/ Thương cảng Hoian d’Or"
