--- a/blocks/hoiandor/about01.yaml
+++ b/blocks/hoiandor/about01.yaml
@@ -2,6 +2,16 @@ about01:
   info:
     title: Hội An D'Or
     description: Thương cảng Vàng son – Liền kề phố hội
+    video:
+      href: https://www.youtube.com/watch?v=wIDjvxSLyIg
+      caption: Video dự án Hoian d'or
+    image1:
+      src: assets/images/13d-1024x768.jpg
+      alt: Ảnh dự án Hoian d'Or 1
+    image2:
+      src: assets/images/4d.jpg
+      alt: Ảnh dự án Hoian d'Or 2
+    decoShape: assets/images/shape1.png
     details:
       - primary: "Vị trí dự án:"
         secondary: Cồn Bắp, Phường Cẩm Nam, Tp Hội An, tỉnh Quảng Nam
