chore: happy work

--- a/blocks/hoiandor/about01.yaml
+++ b/blocks/hoiandor/about01.yaml
@@ -1,10 +1,10 @@
 about01:
   info:
-    title: Hội An D'Or
+    title: Hoian d’Or
     description: Thương cảng Vàng son – Liền kề phố hội
     video:
       href: https://www.youtube.com/watch?v=wIDjvxSLyIg
-      caption: Video dự án Hoian d'or
+      caption: Video dự án Hoian d’Or
     image1:
       src: assets/images/13d-1024x768.jpg
       alt: Ảnh dự án Hoian d'Or 1
