--- a/pages/hoiandor/index.yaml
+++ b/pages/hoiandor/index.yaml
@@ -16,11 +16,11 @@ header:
       href: /
     - label: Phân khu
       children:
-        - label: Shophouse – Hoian d’Or
+        - label: Shophouse – Hoian d'Or
           href: /
-        - label: Villa – Hoian d’Or
+        - label: Villa – Hoian d'Or
           href: /
-        - label: Condotel – Hoian d’Or
+        - label: Condotel – Hoian d'Or
           href: /
         - label: Không gian văn hóa
           href: /
@@ -57,7 +57,7 @@ about01:
       - primary: "Tên pháp lý:"
         secondary: Khu du lịch sinh thái Cồn Bắp
       - primary: "Tên thương mại:"
-        secondary: Hoian d’Or
+        secondary: Hoian d'Or
       - primary: "Vị trí:"
         secondary: Cồn Bắp, Phường Cẩm Nam, Tp Hội An, tỉnh Quảng Nam
       - primary: "Quy mô:"
@@ -69,16 +69,42 @@ about01:
       - primary: "Tổng vốn đầu tư:"
         secondary: 2.330 tỷ đồng
       - primary: "Sản phẩm/ Tiện ích dịch vụ:"
-        secondary: "Dự án bao gồm 3 phân khu chính Village -Town – Garden các phân khu bao gồm các công trình sau: Shophouse/ Villa/ Khách sạn 5* tiêu chuẩn/ Khách sạn 5* VIP/ Condotel/ Boutique 3*/ Khu nông nghiệp sinh thái/ Không gian văn hoá/ Nhà hàng đặc sản/ Bến tàu/ Trung tâm thương mại/ Thương cảng Hoian d’Or"
+        secondary: "Dự án bao gồm 3 phân khu chính Village -Town – Garden các phân khu bao gồm các công trình sau: Shophouse/ Villa/ Khách sạn 5* tiêu chuẩn/ Khách sạn 5* VIP/ Condotel/ Boutique 3*/ Khu nông nghiệp sinh thái/ Không gian văn hoá/ Nhà hàng đặc sản/ Bến tàu/ Trung tâm thương mại/ Thương cảng Hoian d'Or"
 about2:
   title: Hoian d'Or
   description: Vị trí “Vàng” <br/ > Khởi ngàn “Tài lộc“
   info:
-    content: Sở hữu vị trí vàng liền kề phố cổ Hội An, được bao quanh bởi sông Thu Bồn, <strong>Hoian d’Or</strong> là quần thể nghỉ dưỡng sinh thái và trải nghiệm văn hoá duy nhất tại trung tâm của miền di sản. Nơi đây sẽ là chiếc cầu nối giữa quá khứ vàng son và hiện tại tự hào để cùng hướng đến một tương lai khai mở.
+    content: Sở hữu vị trí vàng liền kề phố cổ Hội An, được bao quanh bởi sông Thu Bồn, <strong>Hoian d'Or</strong> là quần thể nghỉ dưỡng sinh thái và trải nghiệm văn hoá duy nhất tại trung tâm của miền di sản. Nơi đây sẽ là chiếc cầu nối giữa quá khứ vàng son và hiện tại tự hào để cùng hướng đến một tương lai khai mở.
     decoShape: assets/images/shape1.png
   image1:
     src: assets/images/Sodo-vitri-04-04-1536x743.png
-    alt: Vị trí Hoian d’Or
+    alt: Vị trí Hoian d'Or
   image2:
     src: assets/images/ketnoivung-03.png
-    alt: Vị trí Hoian d’Or 2
+    alt: Vị trí Hoian d'Or 2
+about03:
+  title: Hoi an d'Or
+  description: Tiện ích Hoàn chỉnh & Đẳng cấp
+  items:
+    - title: Không gian văn hóa <strong>Hoi an d'Or</strong>
+      subTitle: Nối miền “Di sản“
+      description: Không gian văn hoá như một sợi dây kết nối các giá trị trường tồn của mảnh đất Hội An để thế hệ sau có thể tiếp nối và phát huy tinh hoa di sản.
+      href: /
+      image:
+        src: assets/images/Khong-gian-van-hoa-05-05-cropped.png
+        alt: Không gian văn hoá Hoi an d'Or
+    - title: Thương cảng <strong>Hoi an d'Or</strong>
+      subTitle: Thương cảng “Vàng son“
+      description: Tái hiện lại một hình bóng Hội An trên bến dưới thuyền sầm uất một thời. Kết nối với Quảng trường cộng hưởng, nơi đây sẽ là điểm kết nối con đường tơ lụa, mở ra một thế giới huyền ảo cùng hòa âm ánh sáng.
+      href: /
+      image:
+        src: assets/images/Thuong-cang-cropped.png
+        alt: Thương cảng Hoi an d'Or
+    - title: Khu nông nghiệp sinh thái <strong>Hoi an d'Or</strong>
+      subTitle: Chạm vào “Thiên nhiên“
+      description: Khu nông nghiệp sinh thái phía Đông là nơi để bạn và gia đình hoà tâm hồn cùng thiên nhiên, tận hưởng những trải nghiệm sinh thái đầy độc đáo và mới lạ.
+      href: /
+      image:
+        src: assets/images/Cong-vien-sinh-thai-cropped.png
+        alt: Khu nông nghiệp sinh thái Hoi an d'Or
+  background: assets/images/Anh-tong-quan-Hoian-dor-1-1536x845.png
