chore: happy work

--- a/blocks/hoiandor/about03.yaml
+++ b/blocks/hoiandor/about03.yaml
@@ -10,3 +10,4 @@ about03:
         src: http://hoiandor.com/wp-content/uploads/2021/07/Khong-gian-van-hoa-05-05.png
         alt: Không gian văn hoá Hoi an d'or
   background: assets/images/Anh-tong-quan-Hoian-dor-1-1536x845.png
+  decoShape: assets/images/shape1.png
