--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   },
   "dependencies": {
     "@types/fs-extra": "^9.0.13",
+    "@types/minimatch": "^3.0.5",
     "cheerio": "^1.0.0-rc.10",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "lodash": "^4.17.21",
+    "minimatch": "^3.0.4",
     "prompts": "^2.4.1",
     "pug": "^3.0.2",
     "yaml": "^1.10.2"
