--- a/scripts/deploy.yaml
+++ b/scripts/deploy.yaml
@@ -1,3 +1,3 @@
 ignores:
-  - dist/hoiandor/assets/themes/*.html
-  - dist/hoiandor/assets/themes/*.pug
+  - dist/hoiandor/assets/themes/**/*.html
+  - dist/hoiandor/assets/themes/**/*.pug
