--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cheerio": "^0.22.30",
     "@types/glob": "^7.1.4",
     "@types/lodash": "^4.14.173",
+    "@types/md5": "^2.3.1",
     "@types/node": "^16.9.6",
     "@types/prettier": "^2.4.0",
     "@types/prompts": "^2.0.14",
@@ -33,9 +34,11 @@
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "minimatch": "^3.0.4",
     "prompts": "^2.4.1",
     "pug": "^3.0.2",
+    "tinify": "^1.6.0-beta.2",
     "yaml": "^1.10.2"
   }
 }
