chore: happy work

--- a/scripts/deploy.yaml
+++ b/scripts/deploy.yaml
@@ -1,3 +1,5 @@
 ignores:
   - dist/hoiandor/assets/themes/**/*.html
   - dist/hoiandor/assets/themes/**/*.pug
+compressIgnores:
+  - hosts/hoiandor/public/assets/themes/**/*
