chore: happy work

--- a/scripts/deploy.yaml
+++ b/scripts/deploy.yaml
@@ -3,3 +3,5 @@ ignores:
   - dist/hoiandor/assets/themes/**/*.pug
 compressIgnores:
   - hosts/hoiandor/public/assets/themes/**/*
+keywords:
+  - Hoian dO'r
