--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@prettier/plugin-pug": "^1.16.6",
     "@types/cheerio": "^0.22.30",
     "@types/glob": "^7.1.4",
+    "@types/html-minifier": "^4.0.1",
     "@types/lodash": "^4.14.173",
     "@types/md5": "^2.3.1",
     "@types/node": "^16.9.6",
     "@types/prettier": "^2.4.0",
     "@types/prompts": "^2.0.14",
     "@types/pug": "^2.0.5",
+    "@types/slug": "^5.0.2",
+    "@types/uglify-js": "^3.13.1",
     "@types/yaml": "^1.9.7",
     "chokidar-cli": "^3.0.0",
     "html2pug": "^4.0.0",
@@ -33,12 +36,15 @@
     "cheerio": "^1.0.0-rc.10",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
+    "html-minifier": "^4.0.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "minimatch": "^3.0.4",
     "prompts": "^2.4.1",
     "pug": "^3.0.2",
+    "slug": "^5.1.0",
     "tinify": "^1.6.0-beta.2",
+    "uglify-js": "^3.14.2",
     "yaml": "^1.10.2"
   }
 }
