chore: happy work

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@prettier/plugin-pug": "^1.16.6",
     "@types/cheerio": "^0.22.30",
+    "@types/clean-css": "^4.2.5",
     "@types/glob": "^7.1.4",
     "@types/html-minifier": "^4.0.1",
     "@types/lodash": "^4.14.173",
@@ -34,6 +35,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/minimatch": "^3.0.5",
     "cheerio": "^1.0.0-rc.10",
+    "clean-css": "^5.2.0",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "html-minifier": "^4.0.0",
