--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/html-minifier": "^4.0.1",
     "@types/lodash": "^4.14.173",
     "@types/md5": "^2.3.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^16.9.6",
     "@types/prettier": "^2.4.0",
     "@types/prompts": "^2.0.14",
@@ -42,6 +43,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "minimatch": "^3.0.4",
+    "moment": "^2.29.1",
     "prompts": "^2.4.1",
     "pug": "^3.0.2",
     "slug": "^5.1.0",
