--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "slug": "^5.1.0",
     "tinify": "^1.6.0-beta.2",
     "uglify-js": "^3.14.2",
+    "webp-converter": "^2.3.3",
     "yaml": "^1.10.2"
   }
 }
