--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/clean-css": "^4.2.5",
     "@types/glob": "^7.1.4",
     "@types/html-minifier": "^4.0.1",
+    "@types/image-size": "^0.8.0",
     "@types/lodash": "^4.14.173",
     "@types/md5": "^2.3.1",
     "@types/moment": "^2.13.0",
@@ -40,6 +41,7 @@
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "html-minifier": "^4.0.0",
+    "image-size": "^1.0.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "minimatch": "^3.0.4",
